--- a/style/pagina-inicial.css
+++ b/style/pagina-inicial.css
@@ -92,7 +92,7 @@ footer {
     color: #FFFFFF;
     font-size: large;
  
-    position: fixed;
-    bottom: 0;
+    /* position: fixed; */
+    /* bottom: 0; */
     width: 100%;
 }
